--- a/lib/api_web/templates/page/index.html.eex
+++ b/lib/api_web/templates/page/index.html.eex
@@ -3,3 +3,5 @@
   <h2><%= gettext "Welcome to %{name}!", name: "Blazeee" %></h2>
   <p class="lead">Blazeee: Full-Stack solution for rapid development.</p>
 </div>
+
+<div id=”app”></div>
